vertical scrollbar was not showing in Windows OS, with adding the property, it worked

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 
 body {
   margin: 0;
+  overflow: auto;
   color: #222;
   font-family: "Inter var", -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
